[package]
name = "bracket-builder-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
axum = "0.7.4"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "chrono"] }
serde_json = "1"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
once_cell = "1.18.0"
log = "0.4.20"
axum-test-helper = "0.3.0"
chrono = {version = "0.4.31", features = ["serde"]}
